sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:12: error: not enough arguments for method bougerTrou: (col: Int)Unit.
Unspecified value parameter col.
        bougerTrou()
                  ^